# substrate-openapi

./: Cargo.toml  README.md  build.rs
artifacts/: metadata.scale
codegen/: generate.rs
src/: main.rs  system.rs
