[package]
name = "substrate-poem-openai"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1"
poem-openapi = { version = "2", features = ["swagger-ui"]}
subxt = "0.25.0"
tokio = { version = "1", features = ["full"] }
sp-keyring = "7.0.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0",  features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
anyhow = "1.0.66"

[build-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.66"
subxt-codegen = "0.25.0"
jsonrpsee = { version = "0.16.2", features = ["async-client", "client-ws-transport", "http-client"] }
frame-metadata = { version = "15.0.0", features = ["v14", "std"] }
syn = "1.0.98"
codec = { package = "parity-scale-codec", version = "3.0.0" }
hex = "0.4.3"


[patch.crates-io]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
